Dia 2 - frase mudada

--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         <div class="note js-note">
           <div class="note__text">
             <p>
-              Desde que você apareceu na minha vida, percebi que o amor é como uma pintura.
+              Quando você entrou na minha vida, o mundo ganhou um novo tom, como o primeiro raio de sol da manhã
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
             <p>
-              Cada dia ao seu lado adiciona uma nova cor ao meu coração, tornando tudo mais vibrante e bonito.
+              Seu amor é a tinta que colore meus dias, transformando o comum em extraordinário."
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
-            <p>E, sinceramente? Prefiro mil vezes passar horas admirando você do que qualquer obra de museu! 🎨💛</p>
-            <p>Te amo muitooooooooooooooo Dona Encrenca🌻 ! &hearts;.</p>
+            <p>E eu? Bem, eu trocaria todas as paisagens do mundo só para ter você como meu horizonte eterno. 🌅💖</p>
+            <p>Srt. Girassol, TE AMO MUITooooooooooooooo até o infinito e além!!(obs: essa frase n foi tirada de Toy Story)🌻 ! &hearts;.</p>
           </div>
         </div>
       </div>
