Dia 3 - frase mudada

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
 <body>
 <!-- partial:index.partial.html -->
 <html>
-
+<div class="music-control">
+  <button id="music-button">🎵 Play Música</button>
+</div>
 <body class="scissors">
+<audio id="background-music" autoplay loop>
+  <source src="assets/musica/Fly Me To The Moon - Lofi.mp3" type="audio/mpeg">
+  Seu navegador não suporta áudio.
+</audio>
+
   <div class="envelop">
     <div class="envelop__front-paper"></div>
     <div class="envelop__back-paper"></div>
@@ -23,20 +30,20 @@
         <div class="note js-note">
           <div class="note__text">
             <p>
-              Quando você entrou na minha vida, o mundo ganhou um novo tom, como o primeiro raio de sol da manhã
+              Quando te vi pela primeira vez, soube que algo incrível estava prestes a acontecer.
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
             <p>
-              Seu amor é a tinta que colore meus dias, transformando o comum em extraordinário."
+              Com você, os dias comuns se tornam mágicos, e os momentos simples, inesquecíveis.
             </p>
           </div>
         </div>
         <div class="note js-note">
           <div class="note__text">
-            <p>E eu? Bem, eu trocaria todas as paisagens do mundo só para ter você como meu horizonte eterno. 🌅💖</p>
+            <p>Prometo te amar hoje, amanhã e em todos os dias que ainda virão. 🌻</p>
             <p>Srt. Girassol, TE AMO MUITooooooooooooooo até o infinito e além!!(obs: essa frase n foi tirada de Toy Story)🌻 ! &hearts;.</p>
           </div>
         </div>
